<resources>
    <string name="app_name">RedApp</string>
    <string name="txtbienvenida">Bienvenido</string>
    <string name="codprestacional">Ingrese Codigo de Prestacion:</string>
    <string name="fechnacimiento">Ingrese Fecha de Nacimiento:</string>
    <string name="namebtn">Procesar</string>
    <string name="name_fecha">Precioname</string>
    <string name="formatofecha">Dia/Mes/Año</string>
    <string name="title_activity_codigo_adicionales">codigoAdicionales</string>
    <string name="title_activity_combinacion_codigos">combinacionCodigos</string>
    <string name="textoedad"></string><!--SE BORRO EL CONTENIDO DEL TEXTO PARA PODER MOSTRAR LA FECHA-->
    <string name="smitexto">Servicio Materno Infantil (SMI):</string>
    <string name="vacunatexto">Vacunas:</string>
    <string name="medicamentotexto">Medicamentos:</string>
    <string name="insumotexto">Insumos:</string>
    <string name="procedimientotexto">Procedimientos:</string>
    <string name="codadicionaltexto">CODIGOS ADICIONALES:</string>
    <string name="observaciontexto">OBSERVACION:</string>
    <string name="topestexto">TOPES:</string>
    <string name="otrosdiagnosticostexto">OTROS DIAGNOSTICO:</string>

    <string name="txtseleccionacs">Seleccione el Centro de de Salud:</string>

    <string-array name="centrosalud_name">

        <item>CENTRO DE SALUD A</item>
        <item>CENTRO DE SALUD B</item>
        <item>CENTRO DE SALUD C</item>
        <item>CENTRO DE SALUD D</item>
        <item>CENTRO DE SALUD E</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
