<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="proyecto.contol.idmc.appred.redapp.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/codprestacional" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/codprestacionaltxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fechnacimiento"
        android:id="@+id/textView2" />
    <!--<EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/formatofecha"
        android:ems="10"
        android:id="@+id/fechnacimientotxt" />-->
    <TextView
        android:id="@+id/fechnacimientotxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/formatofecha"
        android:layout_margin="30dp"
        />




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/namebtn"
        android:id="@+id/btnvalidar"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
