<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="proyecto.contol.idmc.appred.redapp.codigosAdicionales">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/carvSMI"
                android:layout_gravity="center"
                android:layout_width="297dp"
                android:layout_height="130dp"
                android:layout_marginTop="30dp"
                card_view:cardCornerRadius="3dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/smitexto"
                        android:layout_marginTop="3dp"
                        android:id="@+id/textView3" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Prestacion"
                        android:id="@+id/SMI"
                        android:layout_marginTop="3dp"
                        android:layout_gravity="center_horizontal"
                        />
                </LinearLayout>

            </android.support.v7.widget.CardView>




            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/carvVacuna"
                android:layout_gravity="center"
                android:layout_width="297dp"
                android:layout_height="130dp"
                android:layout_marginTop="30dp"
                card_view:cardCornerRadius="3dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vacunatexto"
                        android:id="@+id/textView4" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Vacuna"
                        android:id="@+id/txtvacuna"
                        />

                </LinearLayout>



            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/carvDiagnostico"
                android:layout_gravity="center"
                android:layout_width="297dp"
                android:layout_height="130dp"
                android:layout_marginTop="30dp"
                card_view:cardCornerRadius="3dp"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Diagnosticos"
                        android:id="@+id/textView5" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="New Text"
                        android:id="@+id/texDiagnotico" />


                </LinearLayout>

            </android.support.v7.widget.CardView>




            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/carvMedicamento"
                android:layout_gravity="center"
                android:layout_width="297dp"
                android:layout_height="130dp"
                android:layout_marginTop="30dp"
                card_view:cardCornerRadius="3dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Medicamento"

                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/txtmedicamento"

                        />
                </LinearLayout>


            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/carvInsumo"
                android:layout_gravity="center"
                android:layout_width="297dp"
                android:layout_height="130dp"
                android:layout_marginTop="30dp"
                card_view:cardCornerRadius="3dp"
                ><LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                ><TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insumotexto"
                android:id="@+id/textView6" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/txtinsumos"
                    />

            </LinearLayout>


            </android.support.v7.widget.CardView>



            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/carvProcedimiento"
                android:layout_gravity="center"
                android:layout_width="297dp"
                android:layout_height="130dp"
                android:layout_marginTop="30dp"
                card_view:cardCornerRadius="3dp"
                ><LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/procedimientotexto"
                    android:id="@+id/textView8" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="New Text"
                    android:id="@+id/txtprocedimiento"
                    />


            </LinearLayout>



            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
